--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.4"
   }
 }
